CCLE-2839 - Control Panel UI clean-up - fixed issue in which collapsing the settings bock hide some control panel elements

--- a/blocks/ucla_control_panel/styles.css
+++ b/blocks/ucla_control_panel/styles.css
@@ -3,7 +3,7 @@
     margin-bottom: 10px;
     border: 2px solid rgb(199,195,197);
     display: block;
-    position: absolute;
+    float: left;    
 }
 
 #cpanel-wrapper .cpheading {
